# microservice_bench

./: .gitignore  .gitmodules  COMPRESSION_IMPLEMENTATION.md  Dockerfile.base  README.md  collect_latency.py  collect_timestamps.md  compression_utils.h  config.h  docker-compose.yml  get_avg_latency.py  infinite_loop.py  install.sh  padding_utils.h  pin_containers.sh  prefork_utils.h  readme.md  reproduce.md  serialization_utils.h  tail.txt  tail_old.txt  tail_proto.txt  tail_proto_old.txt  tail_protobuf.txt  tail_ser1de.txt  tail_ser1de_improved.txt  tail_ser1de_old.txt  tails.txt  thread_pool.h  up_n_pin.sh  update_compression.sh
compression/: CMakeLists.txt  Dockerfile  compression_adapter.h  decision.h  dispatcher.h  docker-compose.yml  latency.txt  main.cpp  metrics.h  plot.py  regression.h  up_n_pin.sh  wrk_compress.lua
compression/load-lat/: plot.py
compression/sweep/: collect_and_plot.py  sweep.sh
compression/sweep/data/: lat_1048576_1000  lat_1048576_1200  lat_1048576_1400  lat_1048576_1600  lat_1048576_1800  lat_1048576_2000  lat_1048576_2200  lat_1048576_2400  lat_1048576_400  lat_1048576_600  lat_1048576_800  lat_131072_11200  lat_131072_12800  lat_131072_14400  lat_131072_16000  lat_131072_17600  lat_131072_19200  lat_131072_3200  lat_131072_4800  lat_131072_6400  lat_131072_8000  lat_131072_9600  lat_2097152_1000  lat_2097152_1100  lat_2097152_1200  lat_2097152_200  lat_2097152_300  lat_2097152_400  lat_2097152_500  lat_2097152_600  lat_2097152_700  lat_2097152_800  lat_2097152_900  lat_262144_1600  lat_262144_2400  lat_262144_3200  lat_262144_4000  lat_262144_4800  lat_262144_5600  lat_262144_6400  (+37 more)
experiments/: breakdown.py  breakdown_protobuf_300B.txt  breakdown_protobuf_service.txt  breakdown_ser1de.txt  breakdown_ser1de_300B.txt  breakdown_ser1de_service.txt  collect_latency.py  collect_timestamps.py  compare_timestamps.py  get_avg_latency.py  get_avg_latency_copy.py  latency_summary_protobuf.txt  latency_summary_ser1de.txt  make_breakdown_stacked_plot.py  plot_4.py  tail.txt  tail_c0s0.txt  tail_c0s1.txt  tail_c1s0.txt  tail_c1s1.txt  tail_protobuf.txt  tail_protobuf_0B.txt  tail_protobuf_1.7K.txt  tail_protobuf_300B.txt  tail_protobuf_600B.txt  tail_protobuf_NO.txt  tail_ser1de.txt  tail_ser1de_0B.txt  tail_ser1de_1.7K.txt  tail_ser1de_300B.txt  tail_ser1de_600B.txt  tail_ser1de_NO.txt
frontend_service/: CMakeLists.txt  Dockerfile  main.cpp
geo_service/: CMakeLists.txt  Dockerfile  main.cpp
hotel/: collect_timestamps.md  docker-compose.yml  up_n_pin.sh
hotel/experiments/: breakdown.py  breakdown_protobuf.txt  tail_protobuf_300B.txt  tail_ser1de_600B.txt
hotel/frontend_service/: main.cpp
hotel/geo_service/: main.cpp
hotel/logs/: N16hotelreservation12UserResponseESe.txt  N16hotelreservation13NearbyRequestEDe.txt  frontend_search_request.txt  (+20 more)
locust/: locustfile.py
logs/: N16hotelreservation11UserRequestEDe.txt  N16hotelreservation11UserRequestESe.txt  N16hotelreservation12UserResponseEDe.txt  N16hotelreservation12UserResponseESe.txt  N16hotelreservation13NearbyRequestEDe.txt  N16hotelreservation13NearbyRequestESe.txt  N16hotelreservation13SearchRequestEDe.txt  N16hotelreservation13SearchRequestESe.txt  N16hotelreservation14NearbyResponseEDe.txt  N16hotelreservation14NearbyResponseESe.txt  N16hotelreservation14SearchResponseEDe.txt  N16hotelreservation14SearchResponseESe.txt  N16hotelreservation15GetRatesRequestEDe.txt  N16hotelreservation15GetRatesRequestESe.txt  N16hotelreservation16CheckUserRequestESe.txt  N16hotelreservation16GetRatesResponseEDe.txt  N16hotelreservation16GetRatesResponseESe.txt  N16hotelreservation16RecommendRequestEDe.txt  N16hotelreservation16RecommendRequestESe.txt  N16hotelreservation17CheckUserResponseEDe.txt  N16hotelreservation17RecommendResponseEDe.txt  N16hotelreservation17RecommendResponseESe.txt  N16hotelreservation18GetProfilesRequestEDe.txt  N16hotelreservation18GetProfilesRequestESe.txt  N16hotelreservation18ReservationRequestEDe.txt  N16hotelreservation18ReservationRequestESe.txt  N16hotelreservation19GetProfilesResponseEDe.txt  N16hotelreservation19GetProfilesResponseESe.txt  N16hotelreservation19ReservationResponseEDe.txt  N16hotelreservation19ReservationResponseESe.txt  frontend_recommend_request.txt  frontend_reservation_request.txt  frontend_search_request.txt  frontend_user_request.txt  service_geo_request.txt  service_profile_request.txt  service_rate_request.txt  service_recommendation_request.txt  service_reservation_request.txt  service_search_request.txt  (+1 more)
logs_old/: N16hotelreservation13NearbyRequestESe.txt  N16hotelreservation14NearbyResponseESe.txt  N16hotelreservation16CheckUserRequestESe.txt  N16hotelreservation17CheckUserResponseEDe.txt  N16hotelreservation18ReservationRequestEDe.txt  frontend_user_request.txt
matmul/: CMakeLists.txt  PARTITIONED_OVERVIEW.md  README.md  amx_matmul.cpp  matmul_adapter.h  matmul_partitioned_common.h  matmul_server.cpp  matmul_server_partitioned.cpp  matmul_utils.h  matmul_workload.cpp  matmul_workload_partitioned.cpp  run_matmul.cpp
profile_service/: CMakeLists.txt  Dockerfile  main.cpp
protos/: hotel_reservation.pb.cc  hotel_reservation.pb.h  hotel_reservation.proto  hotel_reservation_1KB.proto  hotel_reservation_300B.proto  hotel_reservation_600B.proto  hotel_reservation_NO.proto  hotel_reservation_original.proto  service.proto
rate_service/: CMakeLists.txt  Dockerfile  main.cpp
recommendation_service/: CMakeLists.txt  Dockerfile  main.cpp
reservation_service/: CMakeLists.txt  Dockerfile  main.cpp
scheduler/: decision.h  dispatcher.h  metrics.h  scheduler_demo.py  scheduler_practice.py
search_service/: CMakeLists.txt  Dockerfile  main.cpp
service1/: CMakeLists.txt  Dockerfile  main.cpp
service2/: CMakeLists.txt  Dockerfile  main.cpp
socialnet/: docker-compose.yml  padding_utils.h  seed_socialnet.py  up_n_pin.sh
socialnet/user_service/: CMakeLists.txt  Dockerfile  main.cpp
user_service/: CMakeLists.txt  Dockerfile  main.cpp
utils/: compression_utils.h  data_models.h  prefork_utils.h  serialization_utils.h
wrk2/: commands.sh  wrk
(+92 files in other folders)
